# pointcam

./: .gitattributes  .gitignore  .lfsconfig  README.md  pyproject.toml  tox.ini
.github/workflows/: style.yml
checkpoints/: pointcam.pt
notebooks/: visualize_masks.py
pointcam/configs/: __init__.py  base.py  constants.py  experiments.py  fewshot.py  finetune.py  types.py
pointcam/datasets/: __init__.py  base.py  modelnet.py  modelnet_fewshot.py  scanobjnn.py  shapenet.py
pointcam/layers/: __init__.py  mask_transformer.py  pointnet.py  projector.py  swiglu.py  transformer.py
pointcam/models/: __init__.py  base.py  mlp.py  pcbot.py  pointcam.py
pointcam/utils/: builders.py  crop.py  losses.py  render.py  schedulers.py  transforms.py  visualize.py
scripts/: eval_fewshot.py  eval_mlp.py  eval_svm.py  prepare_points_fps.py  train.py
